--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lab": "^8.0.2"
   },
   "dependencies": {
-    "webpack": "^1.12.11",
+    "webpack": "https://github.com/webpack/webpack",
     "webpack-dev-middleware": "^1.4.0"
   }
 }
