--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lab": "^8.0.2"
   },
   "dependencies": {
-    "webpack": "https://github.com/webpack/webpack",
+    "webpack": "2.1.0-beta.22",
     "webpack-dev-middleware": "^1.4.0"
   }
 }
